fix: remove content full-screen gaps

--- a/src/components/background-title/styles.module.css
+++ b/src/components/background-title/styles.module.css
@@ -16,7 +16,6 @@
   overflow: hidden;
   height: 30vh;
   width: 100vw;
-  margin-bottom: 50vh;
 }
 
 .wrapper {
